2013-01-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor_prediction.php: Fixed bug
	in prediction modules editor.
	
	Bug id: #3599200

2013-01-09  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_reporting_advanced_tab.php: Translated
	description for _REPORT_NAME_ into Japanese.

2013-01-09  Hirofumi Kosaka  <kosaka@rworks.jp>

	* include/functions.php: Fixed that the console sometimes shows
	negative timestamp (e.g. '-2 sec') when using 'comparison in
	roll-over' format.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* extensions/system_info.php: Added link to download System info file.

2013-01-08 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/agent_template.php: Fixed duplication of modules
	when template is applied several times. 
	
	Merged from trunk.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Fixed an error 
	adding tags on module creation.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_config.php: Delete option to disable/enable events
	on inventory changes because there is a blacklist implemented.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/functions_config.php: Added new option to disable/enable events
	on inventory changes.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/module_manager.php: changed text from Libray to Library

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/reporting/reporting_builder.php: Deleted a wrong code related to
	cover update.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>

	* include/help/es/help_reporting_advanced_tab.php,
	include/help/ja/help_reporting_advanced_tab.php,
	include/help/en/help_reporting_advanced_tab.php: Documented the new
	macro for cover page.

2013-01-08 Dario Rodriguez <dario.rodriguez@artica.es>
