@@ -1,5 +1,12 @@
 2013-01-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
+	* include/functions_agents.php: Changed constraint in agent creation
+	about the interval (now only greater than zero).
+	
+	Bug id: #3587470
+
+2013-01-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
 	* godmode/agentes/module_manager_editor_prediction.php: Fixed bug
 	in prediction modules editor.
 	
